# tiny-tummy

./: .gitignore  .impeccable.md  AGENTS.md  APP_STORE.md  ARCHITECTURE_GUIDELINES.md  BILLING_IMPLEMENTATION_PLAN.md  EXAMPLE_PROMPTS.md  LOCK_SCREEN_SPIKE.md  PRODUCTION_READINESS_PLAN.md  PRODUCT_ROADMAP.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test_jsobj.kt  vite.config.ts
affinity-assets/: background.af  breastfeed-transparent.af  feed.af  moon.af  nappy.af  poop.af  sun.af
docs/: CODEX_PLAYBOOK.md  COMPUTER_USE_QA_PLAN.md  COMPUTER_USE_QA_RUN_01.md  COMPUTER_USE_QA_RUN_02.md  IOS_APP_STORE_SETUP_TODO.md  export-import-snapshot-v1.md  lifetime-private-purchase-audit.md  (+3 more)
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/android-templates/: BillingPlugin.kt  DownloadsPlugin.kt  MainActivity.kt  StatusBarPlugin.kt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/ios-templates/: BillingPlugin.swift
src-tauri/migrations/: 001_baseline.sql  001_initial.sql  002_rich_feeding.sql  003_episode_mode.sql  004_symptom_logs.sql  005_growth_logs.sql  006_sleep_logs.sql  007_milestone_logs.sql  008_quick_presets.sql  009_diaper_logs.sql  010_child_sex.sql  011_symptom_temperature.sql  012_symptom_method_and_updated_at.sql
src-tauri/src/: billing.rs  db_transaction.rs  downloads.rs  lib.rs  main.rs  report_export.rs  report_pdf.rs  statusbar.rs
src-tauri/src/engine/: guidance.rs  mod.rs  normal_range.rs
(+448 files in other folders)
